--- a/views/daycare.handlebars
+++ b/views/daycare.handlebars
@@ -1,4 +1,4 @@
-<section class="container">
+{{!-- <section class="container">
   <h3 class="daycare-name">{{daycare.name}}</h3>
   <h4>Don't know where to look for a Day Care??</h4>
   <h3>YOR SEARCH ENDS HERE</h3>
@@ -13,4 +13,15 @@
 <!-- Otherwise, provide a link to login -->
 {{else}}
 <a href="/login">Login to end your search</a>
-{{/if}}
+{{/if}} --}}
+
+
+
+{{#each daycares as |daycare|}}
+<section class="card">
+  <a href="#">
+    <h2>{{daycare.Name}}</h2>
+    {{!-- <img src="/images/{{city.city}}.jpg" alt="{{city.city}}"> --}}
+  </a>
+</section>
+{{/each}}
