--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,8 @@
-{{#each daycares as |daycare|}}
-{{> daycare-info daycare}}
+{{#each cities as |city|}}
+<section class="card">
+  <a href="/daycare/{{city.city}}">
+    <header>{{city.city}}</header>
+    <img src="/images/{{city.city}}.jpg" alt="{{city.city}}">
+  </a>
+</section>
 {{/each}}
-
-
