--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
-
+<body>
 <div class="wrapper">
   <header>
     <h1class="has-text-black px-3 py-3 has-text-weight-bold">Toddler Town</h1>
@@ -28,7 +28,7 @@
   </header>
   <main>
 
-          {{{ body }}}
+          {{!-- {{{ body }}} --}}
 
     <aside>
       <h2>The Place</h2>
