--- a/views/daycare.handlebars
+++ b/views/daycare.handlebars
@@ -1,27 +1,35 @@
-{{!-- <section class="container">
-  <h3 class="daycare-name">{{daycare.name}}</h3>
-  <h4>Don't know where to look for a Day Care??</h4>
-  <h3>YOR SEARCH ENDS HERE</h3>
-  <!-- If the user is logged in, render the gallery content -->
-  {{#if loggedIn}}
-  <section class="flex-row justify-center">
-    {#each gallery.paintings as |painting|}}  <!-- dont know how to do it -->
-    {{> painting-details}}
+<table>
+  <thead>
+    <th>Daycare Name</th>
+    <th>Age Group</th>
+    <th>Phone Numbe</th>
+    <th>Email Adrress</th>
+    <th>City</th>
+    <th>Address</th>
+    <th>details</th>
+  </thead>
+  <tbody>
+     {{#each daycares as |daycare|}}
+    <tr>
+      <td>{{daycare.Name}}</td>
+      <td>{{daycare.Age_Group}}</td>
+      <td>{{daycare.Phone_Number}}</td>
+      <td><a href="mailto:{{daycare.Email}}">{{daycare.Email}}</a></td>
+      <td>{{daycare.City}}</td>
+      <td>{{daycare.Address}}</td>
+      <td><a href="{{daycare.Details}}">{{daycare.Details}}</a></td>
+    </tr>
     {{/each}}
-  </section>-->
-</section>
-<!-- Otherwise, provide a link to login -->
-{{else}}
-<a href="/login">Login to end your search</a>
-{{/if}} --}}
+  </tbody>
+</table>
 
 
-
+{{!-- 
 {{#each daycares as |daycare|}}
 <section class="card">
   <a href="#">
     <h2>{{daycare.Name}}</h2>
     {{!-- <img src="/images/{{city.city}}.jpg" alt="{{city.city}}"> --}}
-  </a>
+  {{!-- </a>
 </section>
-{{/each}}
+{{/each}} --}} 
