aligned the login

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,6 +35,14 @@
     background: var(--primary);
     color: var(--light);
   }
+
+  form > div { //formatted the login and signup
+    margin-bottom: 2%;
+  }
+  
+  form label {
+    display: block;
+  }
   
   main {
     display: flex;
