--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -1,6 +1,6 @@
 <section>
-    <a href="/home" class="is-pulled-right"> &larr; Back to Home</a>
-  <h2 class="title">Your Suggestions and reviews are welcome!</h2><hr>
+    <a href="/review" class="is-pulled-right"> &larr; Back to Home</a>
+  <h2 class="title">Your Feedbacks and suggestions on the application are welcome!</h2><hr>
 
   <form class="new-post-form">
     <div>
