--- a/views/partials/review-details.handlebars
+++ b/views/partials/review-details.handlebars
@@ -4,12 +4,7 @@
         <div class="column">
             <p class=" has-text-primary-light"></p>
             <a href="/post/{{id}}"  class="has-text-black is-capitalized is-pulled-left">{{title}} </a></p>
-        </div>
-
-        <div class="column">
-            <span class=""> </span>
-        </div>
-    
+        </div>    
     </header>
 
     <div class="card-content">
@@ -18,7 +13,7 @@
         </div>
         <div class="is-pulled-right">
                 <b>{{user.username}}</b> | 
-                 | {{format_date created_at}} | <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
+                 | {{format_date created_at}} | <a href="/post/{{id}}">{{Comments.length}} {{format_plural "comment"Comments.length}}</a>
         </div>
      </div>   
 </div>
