--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,16 +13,16 @@
 <body>
 <div class="wrapper">
   <header>
-    <h1class="has-text-black px-3 py-3 has-text-weight-bold">Toddler Town</h1>
-    <h3>A one stop Day care finder for your little one!</h13
+    <h1 class="has-text-black px-3 py-3 has-text-weight-bold">Toddler Town</h1>
+    <h3>A one stop Day care finder for your little one!</h3>
     <nav class="navbar mt-2">
             {{#if loggedIn}}
-            <a href="/" class="navbar-item is-hoverable pt-1">Home</a> 
-            <a href="/review" class="navbar-item is-hoverable pt-1">Review</a> 
-            <button id="logout" class="button is-danger">Logout</button>
+            <a href="/" class="navbar-item is-hoverable pt-1"><i class="fas fa-home"></i> Home</a> 
+            <a href="/review" class="navbar-item is-hoverable pt-1"><i class="fas fa-comments"></i> Review</a> 
+            <button id="logout" class="button is-danger"><i class="fas fa-sign-out-alt"></i> Logout</button>
             {{else}}
-            <a href="/" class="navbar-item is-hoverable pt-1">Home</a>
-            <a href="/login" class="button is-primary">Login</a>
+            <a href="/" class="navbar-item is-hoverable pt-1"><i class="fas fa-home"></i> Home</a>
+            <a href="/login" class="button is-primary"><i class="fas fa-sign-in-alt"></i> Login</a>
             {{/if}}
     </nav>
           
