changed the table layout

--- a/views/daycare.handlebars
+++ b/views/daycare.handlebars
@@ -17,7 +17,8 @@
       <td><a href="mailto:{{daycare.Email}}">{{daycare.Email}}</a></td>
       <td>{{daycare.City}}</td>
       <td>{{daycare.Address}}</td>
-      <td><a href="{{daycare.Details}}">{{daycare.Details}}</a></td>
+      {{!-- <td><a href="{{daycare.Details}}">{{daycare.Details}}</a></td> --}}
+      <td><a href="{{daycare.Details}}">link</a></td>
     </tr>
     {{/each}}
   </tbody>
