--- a/views/daycare.handlebars
+++ b/views/daycare.handlebars
@@ -2,11 +2,11 @@
   <thead>
     <th>Daycare Name</th>
     <th>Age Group</th>
-    <th>Phone Numbe</th>
+    <th>Phone Number</th>
     <th>Email Adrress</th>
     <th>City</th>
     <th>Address</th>
-    <th>details</th>
+    <th>More Details</th>
   </thead>
   <tbody>
      {{#each daycares as |daycare|}}
