--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,33 +10,39 @@
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
+
+
 <body>
 <div class="wrapper">
+ 
+        
+    
   <header>
     <h1 class="has-text-black px-3 py-3 has-text-weight-bold">Toddler Town</h1>
-    <h3>A one stop Day care finder for your little one!</h3>
+    <h3>A one stop Day care finder for your little one!</h3
     <nav class="navbar mt-2">
             {{#if loggedIn}}
             <a href="/" class="navbar-item is-hoverable pt-1"><i class="fas fa-home"></i> Home</a> 
             <a href="/review" class="navbar-item is-hoverable pt-1"><i class="fas fa-comments"></i> Review</a> 
             <button id="logout" class="button is-danger"><i class="fas fa-sign-out-alt"></i> Logout</button>
             {{else}}
-            <a href="/" class="navbar-item is-hoverable pt-1"><i class="fas fa-home"></i> Home</a>
+            <a href="/" class="button is-primary"><i class="fas fa-home"></i> Home</a>
             <a href="/login" class="button is-primary"><i class="fas fa-sign-in-alt"></i> Login</a>
             {{/if}}
     </nav>
           
   </header>
+</div>
   <main>
 
           {{!-- {{{ body }}} --}}
 
-    <aside>
+    <!--<aside>
       <h2>The Place</h2>
       <h2>The Contact</h2>
       <h2>The Name</h2>
       <h2>We got it all!</h2>
-    </aside>
+    </aside> -->
     <div class="display">
       {{{body}}}
     </div>
