--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
   
-<div class="column">
+<!--<div class="column">
 <h2 class="title pb-4">login:</h2><hr>
 <form class="login-form">
   <div>
@@ -15,8 +15,49 @@
     <a href="/signup"><button type="button" class="button is-danger">signup</button></a>
   </div>
 </form>
-</div>
+</div>-->
 
 
-<!-- javascript file-->
-<script src="/js/login.js"></script>
+<!-- javascript file<script src="/js/login.js"></script>-->
+
+
+
+
+    <section class="hero is-success is-fullheight">
+        <div class="hero-body">
+            <div class="container has-text-centered">
+                <div class="column is-4 is-offset-4">
+                    <h3 class="title has-text-black">Login</h3>
+                    <hr class="login-hr">
+                    <p class="subtitle has-text-black">Please login to proceed.</p>
+                    <div class="box">
+                          <form class="login-form">
+                            <div class="field">
+                                <div class="control">
+                                    <input class="input is-large" type="email" id="email-login" placeholder="Your Email" autofocus="">
+                                </div>
+                            </div>
+
+                            <div class="field">
+                                <div class="control">
+                                    <input class="input is-large" type="password" id="password-login"  placeholder="Your Password">
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label class="checkbox">
+                  
+                            </div>
+                            <button class="button is-block is-info is-large is-fullwidth">Login <i class="fa fa-sign-in" aria-hidden="true"></i></button>
+                        </form>
+                    </div>
+                    <p class="has-text-grey">
+                        <a href="../signup">Dont have an account? Signup instead</a> &nbsp;·&nbsp;
+                
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="/js/login.js"></script>
+    
