--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -5,11 +5,11 @@
   <form class="new-post-form">
     <div>
       <label for="post-title">topic:</label>
-      <input class="input" type="text" id="post-title" name="post-title" placeholder="insert blog title here"/>
+      <input class="input" type="text" id="post-title" name="post-title" placeholder="insert comment title here"/>
     </div>
     <div>
       <label for="post-content">content:</label>
-      <input class="textarea is-large" id="post-content" name="post-content" placeholder="insert blog content here"/>
+      <input class="textarea is-large" id="post-content" name="post-content" placeholder="insert comment content here"/>
     </div>
     <button type="submit" class="button is-primary is-pulled-right">Submit</button>
   </form>
