--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -1,6 +1,6 @@
 <section>
-    <a href="/review" class="is-pulled-right"> &larr; Back to Home</a>
-  <h2 class="title">Your Feedbacks and suggestions on the application are welcome!</h2><hr>
+    <a href="/review" class="is-pulled-right"> &larr; Back to Review</a>
+  <h2 class="title">Share your Feedbacks and concerns!</h2><hr>
 
   <form class="new-post-form">
     <div>
@@ -16,3 +16,8 @@
 </section>
 
 <script src="/js/add-post.js"></script>
+
+<script>
+    document.getElementById("wrapper").style.display="none";
+    document.getElementById("main").style.display="block";
+  </script>
