--- a/views/daycare.handlebars
+++ b/views/daycare.handlebars
@@ -23,14 +23,9 @@
     {{/each}}
   </tbody>
 </table>
+<script>
+    document.getElementById("wrapper").style.display="none";
+    document.getElementById("main").style.display="block";
+  </script>
 
 
-{{!-- 
-{{#each daycares as |daycare|}}
-<section class="card">
-  <a href="#">
-    <h2>{{daycare.Name}}</h2>
-    {{!-- <img src="/images/{{city.city}}.jpg" alt="{{city.city}}"> --}}
-  {{!-- </a>
-</section>
-{{/each}} --}} 
