--- a/views/review.handlebars
+++ b/views/review.handlebars
@@ -1,3 +1,9 @@
+    <nav class="navbar mt-2">
+          
+            <a href="/" id="home"class="navbar-item is-hoverable pt-1"><i class="fas fa-home"></i> Home</a> 
+            <a href="/daycare" id="daycare1"class="navbar-item is-hoverable pt-1"><i class="fas fa-search"></i> Daycare</a> 
+            <a id="logout1" href="#" class="navbar-item is-hoverable pt-1"></i> Logout</a>
+    </nav>
     <div class="mb-5 pt-3">
         <a href="/review/create/"><button id="create-post" class="button is-primary is-pulled-right">create post</button></a>
         
@@ -17,3 +23,7 @@
 
 {{/if}}
 </div>
+<script>
+    document.getElementById("wrapper").style.display="none";
+    document.getElementById("main").style.display="block";
+  </script>
