--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -21,3 +21,8 @@
 {{#if loggedIn}}
 <script src="/js/comment.js"></script>
 {{/if}}
+
+<script>
+    document.getElementById("wrapper").style.display="none";
+    document.getElementById("main").style.display="block";
+  </script>
