--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,5 +1,5 @@
 <article>
-  <a href="/review" class="is-pulled-right"> &larr; back to dashboard</a>
+  <a href="/review" class="is-pulled-right"> &larr; back to Reviews</a>
   <h2 class="title mt-5">edit post</h2><hr>
   <form class="edit-post-form">
     <div>
@@ -25,3 +25,6 @@
 <script src="/js/edit-post.js"></script>
 <script src="/js/delete-post.js"></script>
 <script src="/js/comment.js"></script>
+<script>
+    document.getElementById("wrapper").style.display="none";
+  </script>
