--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 
 
 <body>
-<div class="wrapper">
+<div class="wrapper" id="wrapper">
  
         
     
@@ -22,8 +22,8 @@
     <h3>A one stop Day care finder for your little one!</h3
     <nav class="navbar mt-2">
             {{#if loggedIn}}
-            <a href="/" class="navbar-item is-hoverable pt-1"><i class="fas fa-home"></i> Home</a> 
-            <a href="/review" class="navbar-item is-hoverable pt-1"><i class="fas fa-comments"></i> Review</a> 
+            <a href="/daycare" class="navbar-item is-hoverable pt-1" id="Daycare"><i class="fas fa-search"></i> Daycare</a> 
+            <a href="/review" class="navbar-item is-hoverable pt-1" id="review"><i class="fas fa-comments"></i> Review</a> 
             <button id="logout" class="button is-danger"><i class="fas fa-sign-out-alt"></i> Logout</button>
             {{else}}
             <a href="/" class="button is-primary"><i class="fas fa-home"></i> Home</a>
@@ -33,7 +33,7 @@
           
   </header>
 </div>
-  <main>
+  <main id="main">
 
           {{!-- {{{ body }}} --}}
 
@@ -50,7 +50,8 @@
 
   {{#if loggedIn}}
   <script src="/js/logout.js"></script>
+
   {{/if}}
 </body>
-
+{{!-- <script src="/js/main.js"></script> --}}
 </html>
