--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,4 +1,5 @@
 <!-- displaying articles -->
+<a href="/review"  margin-botton="5px" class="is-pulled-right"> &larr; Back to Reviews</a>
 {{> review-details post}}
 
 <!-- displaying form and comments-->
